Changed The Initial Workflow Setup

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="dist/css/main.css">
+    <script src="dist/js/script.js" defer></script>
     <title>Tic Tac Toe Game</title>
 </head>
 
