Changed index.html file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="game-title">
+        <span>YOU &nbsp;&nbsp; vs &nbsp;&nbsp;AI</span>
+    </div>
     <div class="container" id="board">
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
