Added two classes for the X's and O's

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <span>YOU &nbsp;&nbsp; vs &nbsp;&nbsp;AI</span>
     </div>
     <div class="container" id="board">
-        <div class="cell" data-cell>X</div>
-        <div class="cell" data-cell>O</div>
+        <div class="cell x" data-cell></div>
+        <div class="cell circle" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
-        <div class="cell" data-cell>X</div>
         <div class="cell" data-cell></div>
-        <div class="cell" data-cell>O</div>
-        <div class="cell" data-cell>O</div>
-        <div class="cell" data-cell>X</div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
     </div>
     <div class="winning-message" id="winningMessage">
         <div data-winning-message-text></div>
