Added two classes for the X's and O's

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="game-title">
         <span>YOU &nbsp;&nbsp; vs &nbsp;&nbsp;AI</span>
     </div>
-    <div class="container" id="board">
+    <div class="container x" id="board">
         <div class="cell x" data-cell></div>
         <div class="cell circle" data-cell></div>
         <div class="cell" data-cell></div>
