--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="cell" data-cell></div>
     </div>
     <div class="winning-message" id="winningMessage">
-        <div data-winning-message-text></div>
-        <button id="restartButton"></button>
+        <div data-winning-message-text>X Wins!</div>
+        <button id="restartButton">Restart</button>
     </div>
 </body>
 
