Simple Changes just for testing

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="game-title">
         <span>YOU &nbsp;&nbsp; vs &nbsp;&nbsp;AI</span>
     </div>
-    <div class="container x" id="board">
-        <div class="cell x" data-cell></div>
-        <div class="cell circle" data-cell></div>
+    <div class="container" id="board">
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
@@ -26,7 +26,7 @@
         <div class="cell" data-cell></div>
     </div>
     <div class="winning-message" id="winningMessage">
-        <div data-winning-message-text>X Wins!</div>
+        <div data-winning-message-text></div>
         <button id="restartButton">Restart</button>
     </div>
 </body>
