--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="game-title">
         <span>YOU &nbsp;&nbsp; vs &nbsp;&nbsp;AI</span>
     </div>
+    <div class="info"></div>
+    <div class="score"></div>
     <div class="container" id="board">
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
