Synchronize the user's info with the game

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
 <body>
     <div class="game-title">
-        <span>YOU &nbsp;&nbsp; vs &nbsp;&nbsp;AI</span>
+        <!-- <span>YOU &nbsp;&nbsp; vs &nbsp;&nbsp;AI</span> -->
+        <span class="infos score"></span>
     </div>
-    <div class="info"></div>
-    <div class="score"></div>
     <div class="container" id="board">
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
