Added the html code for the game's footer

--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
         <div data-winning-message-text></div>
         <button id="restartButton">Restart</button>
     </div>
+    <!-- My Game footer -->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text">&COPY; 2020 By <a href="https://github.com/barhouum7"
+                        target="_blank">GitHub@barhouum7</a>. &REG; All Rights Reserved.
+                </p>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li><a class="twitter" href="https://twitter.com/MindH4Q3rr" target="_blank"><i
+                                class="fa fa-twitter"></i></a></li>
+                    <li><a class="dribbble" href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                    <li><a class="linkedin" href="https://www.linkedin.com/in/ibrahimbs/" target="_blank"><i
+                                class="fa fa-linkedin"></i></a></li>
+                    <li><a class="github" href="https://www.github.com/barhouum7/" target="_blank"><i
+                                class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
