--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="dist/js/script.js" defer></script>
     <title>Tic Tac Toe Game</title>
 </head>
@@ -32,11 +33,11 @@
     </div>
     <!-- My Game footer -->
     <footer class="site-footer">
-        <div class="container">
+        <div class="footer-container">
             <div class="col-md-8 col-sm-6 col-xs-12">
-                <p class="copyright-text">&COPY; 2020 By <a href="https://github.com/barhouum7"
-                        target="_blank">GitHub@barhouum7</a>. &REG; All Rights Reserved.
-                </p>
+                <span class="github-link">&nbsp;&nbsp;&COPY; 2020 By <a href="https://github.com/barhouum7"
+                        target="_blank">GitHub@barhouum7</a>. &REG; All Rights
+                    Reserved.</span>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
