Making the footer responsive for all media screens

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="col-md-8 col-sm-6 col-xs-12">
-                <span class="github-link">&nbsp;&nbsp;&COPY; 2020 By <a href="https://github.com/barhouum7"
+                <div class="github-link">&nbsp;&nbsp;&COPY; 2020 By <a href="https://github.com/barhouum7"
                         target="_blank">GitHub@barhouum7</a>. &REG; All Rights
-                    Reserved.</span>
+                    Reserved.</div>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
